--- a/css/courseRegistration.css
+++ b/css/courseRegistration.css
@@ -112,7 +112,7 @@
 }
 
 .registration-section{
-    background: linear-gradient(to bottom, rgba(16, 2, 146, 0.281), rgba(29, 26, 197, 0.281)), url(/assets/img/reg-banner.jpg);
+    background: linear-gradient(to bottom, rgba(16, 2, 146, 0.281), rgba(29, 26, 197, 0.281)), url(/assets/img/reg-banner.jpg) center;
     background-size: cover;
     color: var(--secondary-color);
     display: flex;
